# imhd-CUDA

./: .gitignore  CONTRIBUTING.md  README.md  no_diffusion_micro_changes.txt
benchmarking/: README.md
benchmarking/data/: benchNxNyNz_128128128.csv  benchNxNyNz_128128128_o1.csv  benchNxNyNz_128128128_qintbdry_micro.csv  benchNxNyNz_128128128_qintbdry_unopt.csv  benchNxNyNz_256256256.csv  benchNxNyNz_256256256_qintbdry_micro.csv  benchNxNyNz_304304592.csv  benchNxNyNz_384384384.csv  benchNxNyNz_646464.csv  benchNxNyNz_646464_o1.csv
benchmarking/src/: CMakeLists.txt  README.md  main.cu  manual.cu  manual_mega.cu  manual_micro.cu  profile.cu  profile_full.cu
data/: README.md
data/on-device/: README.md
data/rhovz/: README.md
debug/: README.md
debug/grid-gds/: write_grid.cu
debug/infs/: README.md  find_infs.py
debug/nulls/: README.md  find_nulls.py
debug/src/: CMakeLists.txt  main.cu  no_diffusion.cu  no_diffusion_micro.cu
deprecated/: README.md  fluidadvance.cu  kernels_od.cu
deprecated/CMakeLists/: README.md
deprecated/debug-history/: rdm_61224.txt  rdm_61324.txt  rdm_61624.txt
deprecated/examples/: README.md
deprecated/examples/visualization/src/: CMakeLists.txt  vtk_icsvis_ser.cpp
deprecated/headers/: initialize_od.cuh  kernels_od_int.cuh
deprecated/include/: README.md  cufile_sample_utils.h  diffusion.cuh  utils.cuh
deprecated/kernels/: README.md  kernels_od_int.cu
deprecated/lib/: kernels_od.cu
deprecated/main/: main.cu
deprecated/source/: kernels_od.cu  kernels_od_2manyreg.cu
deprecated/src/: CMakeLists.txt  main.cu
deprecated/tests/output/src/: CMakeLists.txt  output.cu
deprecated/visualization/: CMakeLists.txt  README.md
examples/: README.md
examples/data_output/: README.md
examples/data_output/src/: CMakeLists.txt  README.md  hdf5_gds_write.cu  hdf5_write.cpp  hdf5_write.cu  hdf5_write_all.cu  hdf5_writeattributes.cpp  phdf5_write.cpp
examples/flux_jacobians/: README.md  imhd_fluxJacobians_C.nb
examples/flux_jacobians/src/: CMakeLists.txt  README.md  fjevs_compute_example.cu  flux_jacobian_evs.cpp
examples/library_test/: hello_world6D
examples/old/: README.md
examples/old/library_test/: CMakeLists.txt  hello_launcher_cu  main.c  main.cpp
examples/oop/: README.md
examples/problem_size/: possible_hd.csv
examples/visualization/: README.md
include/: README.md  diffusion.cu  diffusion.cuh  gds.cu  gds.cuh  grid.cuh  helper_functions.cu  helper_functions.cuh  initialize_od.cu  initialize_od.cuh  kernels.cuh  kernels_hd.cuh  kernels_od.cu  kernels_od.cuh  kernels_od_fluxes.cu  kernels_od_intvar.cu  kernels_od_intvar.cuh  phdf5.hpp  stability.hpp  utils.cpp  utils.cu  utils.cuh  utils.hpp
include/on-device/: README.md  diffusion.cuh  helper_functions.cuh  initialize_od.cuh  kernels_fluidbcs.cuh  kernels_intvarbcs.cuh  kernels_od.cuh  kernels_od_fluxes.cuh  kernels_od_intvar.cuh
include/serial/: README.md  fluxFunctions.hpp  idealMHDFluid.hpp  rank3Tensor.hpp
lib/: README.md  helper_functions.cu  initialize_od.cu  phdf5.cpp  stability.cpp  utils.cpp  utils.cu
lib/on-device/: README.md  diffusion.cu  helper_functions.cu  initialize_od.cu  kernels_fluidbcs.cu  kernels_intvarbcs.cu  kernels_od.cu  kernels_od_fluxes.cu  kernels_od_intvar.cu
lib/serial/: README.md  fluxFunctions.cpp
machine-learning/: README.md
python/: README.md
python/bennett-vorticity/: benpinch_module.py  bvortex_module.py  shear_flow.py  temp-rccubed_shear_flow.py  temp-rcubed_FuZE_secondorder.py  temp-rcubed_flow_FuZE.py
python/lib/: bennett.py  constants.py  module.py
python/mixed-vorticity/: optimal_chi.py
python/relativistic/: MJ1D_u.csv  MaxwellJuttner_1D.py
python/screwpinch/: axisymmetric_astro.py  constants.py  conversions.py  module.py  uniform.py
src/: CMakeLists.txt  CMakeLists_cufile.txt  CMakeLists_onexec.txt  README.md  compute_stability.cpp  hdf5_write_grid.cpp  main.cu  phdf5_write_all.cpp  write_grid.cu
src/host-device/: README.md
src/on-device/: CMakeLists.txt  README.md  full.cu  main.cu  no_diffusion.cu  no_diffusion_mega.cu  no_diffusion_micro.cu  no_diffusion_micro_ec.cu
src/on-device/utils/: CMakeLists.txt  README.md  compute_stability.cpp  hdf5_write_attributes.cpp  phdf5_write_all.cpp
src/par/: README.md
src/serial/: README.md  main.cpp
test/: README.md  problem_size.py
test/cufile_test/: README.md  cufile_test.cu  test
test/gds/: README.md
test/grid_test/: grid-test  grid.cu  grid.cuh  grid_test.cu
test/ics_test/: CMakeLists.txt  ics.cu
test/initialize/: README.md
test/library_test/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hello_launcher_cu  main.cpp  main.cu
test/problem_size/: possible_od.csv  problem_size_hd.py  problem_size_od.py
test/simplest_struct/: simple.cuh
test/vtk/: README.md
test/vtk/ics_test_hostbuf/: CMakeLists.txt  README.md  condense_csvs.py  condense_fluid.py  condense_grid.py  ics.cu  ics_cu
test/vtk/ics_test_hostbuf/ics_vis/: rho_vis.py
test/vtk/ics_test_hostbuf/ics_vis_cpp/: README.md
test/vtk/ics_test_hostbuf/ics_vis_cpp/vertex/: CMakeLists.txt  vertex.cpp  vertex_vis
test/vtk/ics_test_hostbuf/ics_vis_python/: README.md  fluid_vis_structgrid.py
test/vtk/ics_test_hostbuf/ics_vis_python/examples/: rho_vis.py
test/write_cufilefunc_test/: plot_dat.py  write_gds_functest.cu  writetest
tests/: README.md
visualization/: README.md  create_video.cpp
visualization/include/: vis_helper.hpp
visualization/lib/: helper.cpp
visualization/screwpinch/: axisymmetric_astro.py  axisymmetric_fusion.py  constants.py  conversions.py
visualization/src/: CMakeLists.txt  README.md
visualization/src/make_movie/: driver.cpp  driver_infs.cpp  read_data.cpp  read_data.hpp  read_fluid_data.cpp  read_grid_attributes.cpp  read_grid_data.cpp
visualization/src/make_movie2D/: driver.cpp  read_fluid_plane.cpp
visualization/src/view_frame/: README.md  driver.cpp  view_frame.cpp
visualization/src/view_frame2D/: driver.cpp  view_frame2D.cpp
wolfram/: README.md
wolfram/bennett-vorticity/: bennett_vortex_generalshear.nb  (+9 more)
(+133 files in other folders)
